# gencoe

./: LICENSE  README.md  pyproject.toml
src/gencoe/: __init__.py  __main__.py  component.py  init.py  scene.py
tests/: test_gencoe.py
